--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-12">
     <!--<app-home></app-home>-->
-      <app-applications></app-applications>
+      <app-application></app-application>
 
     </div>
   </div>
